samples/_failures_safe/1761252102_0675c9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_35fec281.c: In function ‘main’:
./samples/SAFE/__tmp_35fec281.c:150: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_35fec281.c:149:9: error: expected declaration or statement at end of input
  149 |         switch
      |         ^~~~~~
./samples/SAFE/__tmp_35fec281.c:149:9: error: expected declaration or statement at end of input
